@@ -12,7 +12,6 @@ importFrom(future,getGlobalsAndPackages)
 importFrom(future,nbrOfWorkers)
 importFrom(future,resolve)
 importFrom(future,value)
-importFrom(globals,cleanup)
 importFrom(globals,findGlobals)
 importFrom(iterators,iter)
 importFrom(parallel,splitIndices)
