@@ -47,17 +47,23 @@ while respecting arguments \code{.export} and \code{.noexport}.
 packages that need to be exported.}
 }
 
-\item{\code{"future-unless-manual"}}{(default) Use the \code{"future"} approach
-unless argument \code{.export} is specified (or is \code{NULL}).
+\item{\code{"foreach+future"}}{Globals are identified by the \code{"foreach"} and
+\code{"future"} methods combined.
+}
 }
 
-\item{\code{"foreach-with-warning"}, \code{"future-with-warning"}}{
-Use the \code{"foreach"} or the \code{"future"} approach to identify globals,
-but produce a warning if argument \code{.export} lacks some of those
-automatically identified globals.
-This can provide helpful feedback to developers using \code{foreach()}.
-}
-}
+By appending suffix \code{"-unless-manual"} to any of the above automated
+methods, the automated methods are used unless unless argument \code{.export}
+is specified (or is \code{NULL}).
+This is a to developers for testing that \code{.export} statements are
+correct.
+
+By appending suffix \code{"-with-warning"} to any of the above automated
+methods, an informative warning will be produced if argument \code{.export}
+is used but it lacks some of the globals that are found through the
+automated methods.
+This is useful to developers for identifying missing \code{.export} elements.
+Note that some of the automatically found globals may be false positives.
 
 The following aliases are \emph{deprecated}:
 \code{".export"} (renamed to \code{"manual"}),
